# ImageProcessing

./: .gitignore  README.md
3DMotion/: .gitignore  Aero Triangulation.ipynb  Bayes Filter and Models.ipynb  Camera Extrinsics and Intrinsics.ipynb  DLT and Camera Calibration.ipynb  Direct Solutions for Computing the Fundamental and Essential Matrix.ipynb  Easier Example.ipynb  Epipolar Geometry.ipynb  Homogeneous Coordinates.ipynb  Iterative Solution for the Relative Orientation.ipynb  Kalman Filter and EKF.ipynb  Multi-View Reconstruction.ipynb  Orthophoto.ipynb  Projective 3-Point Algorithm.ipynb  README.md  SIFT Features and RANSAC.ipynb  Structure From Motion.ipynb  Structure From Motion.md  Triangulation and Absolute Orientation.ipynb  config.json  helper.py
3DMotion/.ipynb_checkpoints/: Structure From Motion-checkpoint.ipynb
RaspberryPi/: CameraCalibration.py  install.sh  main.cpp
RaspberryPi/Dev/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  PiServer.h  README.md  Socket.cpp  Socket.h  client.cpp  cv_client.cpp  cv_server.cpp  main.cpp
RaspberryPi/Performance/LED/: CMakeLists.txt  blink.c  blink.py  buttonInput.cpp  buttonInput.py
RaspberryPi/Performance/MPU6050/: main.cpp
RaspberryPi/Performance/framerate_disk/: CMakeLists.txt  main.cpp  test.sh
RaspberryPi/Performance/threadedframes/: main.cpp  test.sh
